# fusion-copilot

./: .eslintrc.cjs  .prettierrc  index.html  package.json  pnpm-lock.yaml  splashscreen.html  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: install-sqlite.bat
.github/workflows/: main.yml
src/: App.tsx  main.tsx
src-tauri/: .env  Cargo.toml  README.md  abi.proto  build.rs  sqlite.db  sqlite3.lib  tauri.conf.json
src-tauri/examples/: covid.rs  dialect.rs
src-tauri/icons/: icon.icns
src-tauri/lang/: de.json
src-tauri/migrations/2023-09-04-084838_create_apps/: down.sql  up.sql
src-tauri/migrations/2023-09-04-092222_create_note/: up.sql
src-tauri/migrations/2023-10-18-064718_create_configs/: down.sql  up.sql
src-tauri/migrations/2023-10-18-065148_create_user/: up.sql
src-tauri/scripts/: first_batch.bat  start_app.sh  win-port-killer.bat
src-tauri/src/: lib.rs  main.rs  schema.rs
src-tauri/src/engine/: mod.rs  photon.rs
src-tauri/src/front_commands/: action_opts.rs  config_opts.rs  file_opts.rs  mod.rs  note_opts.rs  sys_opts.rs
src-tauri/src/local_db/: mod.rs  models.rs
src-tauri/src/pb/: abi.rs  mod.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/handlers/: example.rs  mod.rs  routes.rs
src-tauri/src/sql_querier/: convert.rs  dialect.rs  fetcher.rs  loader.rs  mod.rs
src-tauri/src/sys_config/: mod.rs
src/assets/styles/: main.scss  tailwind.css
src/components/: common-styles.tsx  index.ts
src/components/SvgIcon/: index.tsx  useDynamicSvgImport.tsx
src/constants/: db_relevant.ts  index.ts
src/hooks/: useClickInside.tsx  useClickOutside.tsx  useInterval.tsx  usePrevious.tsx  useTimeout.tsx  useToggleHide.ts
src/pages/Developer/: PageAppDetail.tsx  PageDataJsonExport.tsx  PageDevSetting.tsx  PageMigrateApp.tsx  PageToolManage.tsx  constants.ts  index.tsx  interface.ts  styles.ts
src/pages/Developer/PageAppLog/: index.tsx
src/pages/Developer/PageDataJson/: constants.ts  index.tsx  interface.ts
src/pages/Developer/PageDataJson/components/: CustomNode.tsx  Graph.tsx  ObjectNode.tsx  TextNode.tsx  TextRenderer.tsx  styles.tsx
src/pages/Developer/PageDataJson/utils/core/: addEdgeToGraph.ts  addNodeToGraph.ts  traverse.ts
src/pages/Developer/PageDataJson/utils/graph/: calcNodeSize.ts  getChildrenEdges.ts  getNextDirection.ts  getOutGoers.ts  search.ts
src/pages/Developer/PageDataJson/utils/json/: getNodePath.ts  jsonParser.ts
src/pages/Developer/PageDevSetting/: EnvSettings.tsx  index.tsx
src/pages/Developer/PageEditScript/: index.tsx
src/pages/Developer/components/: DeploymentManage.tsx  ToolManage.tsx
src/pages/Home/: index.tsx
src/pages/Notes/: NoteEditor.tsx  index.tsx  styles.ts
src/pages/QuadrantTime/: index.tsx
src/pages/Toolkit/: index.tsx
src/pages/Toolkit/FileSender/: ReceiverClient.tsx  index.tsx
src/pages/Toolkit/ImageHandler/: index.tsx
src/pages/Toolkit/ImageJSHandler/: index.tsx
src/pages/Toolkit/SqlQuerier/: index.tsx
src/pages/Toolkit/StaticServer/: index.tsx
src/pages/Whiteboard/: index.tsx
src/router/: index.tsx
src/store/: index.ts  interface.ts  useDeveloper.ts  useExternal.ts  useInternal.ts
src/utils/: index.ts  updater.ts
