[package]
name = "fusion_copilot"
version = "0.1.6"
description = "A Tauri App"
authors = ["fujia"]
license = "MIT"
repository = "https://github.com/fusion-tech-org/fusion-copilot.git"
edition = "2021"

[[example]]
name = "dialect"

[[example]]
name = "covid"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }
prost-build = "0.12"                             # compile protobuf

[dependencies]
tauri = { version = "1.4", features = [
  "updater",
  "system-tray",
  "http-all",
  "shell-open",
  "shell-execute",
  "path-all",
  "fs-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6.6"
anyhow = "1.0.75" # error's handling
mime = "0.3.17"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = "0.11.20"
actix-web = "4.4.0"
actix-files = "0.6.2"
dirs = "5.0.1"
diesel = { version = "2.1.1", features = ["sqlite"] }
diesel_migrations = "2.1.0"
thiserror = "1.0.48"
base64 = "0.21.3" # base64 encode/decode
bytes = "1.5.0" # handle byte stream
image = "0.24.7" # handle picture
lazy_static = "1.4.0" # To initiate static variable more convenient via macro
libsqlite3-sys = { version = ">=0.17.2, <0.26.0", features = [
  "bundled",
] } # to resove relevant issues about sqlite 
lru = "0.11.1" # LRU cache
percent-encoding = "2.3.0" # url encode/decode
photon-rs = "0.3.2" # picture's effects
prost = "0.12.0" # protobuf's handling
tracing = "0.1.37" # logger and tracing
tracing-subscriber = "0.3.17" # logger and tarcing
env_logger = "0.10.0"
futures = "0.3.28"
async-trait = "0.1.73" # allowing include `async fn` in trait
# sqlparser = "0.37.0" # SQL parser
sqlparser = "0.10.0"                                       # SQL parser
polars = { version = "0.15", features = ["json", "lazy"] } # DataFrame library


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
